cabal-version:       3.0
name:                prettyprinter-lucid
homepage:            https://github.com/georgefst/prettyprinter-lucid
license:             BSD-3-Clause
license-file:        LICENSE
version:             0.1.0.0
extra-doc-files:     README.md

library
    exposed-modules:
        Prettyprinter.Lucid
    build-depends:
        base ^>= {4.12, 4.13, 4.14},
        lucid ^>= 2.9.12,
        prettyprinter ^>= 1.7.0,
        text ^>= 1.2.3,
    hs-source-dirs:
        src
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -fdefer-typed-holes
    default-language: Haskell2010
    default-extensions:
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        DerivingStrategies
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        GeneralisedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        OverloadedStrings
        PartialTypeSignatures
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
